Fixed weird issue with Mac Chrome not liking classes named "input"

--- a/web/SignIn.xhtml
+++ b/web/SignIn.xhtml
@@ -34,9 +34,9 @@
                     <div id="page-title">Sign In</div>
                     <h:form id="form">
                         <!-- Input fields -->
-                        <h:inputText id="signin-username" class="input" value="#{loginManager.username}"
+                        <h:inputText id="signin-username" class="input-control" value="#{loginManager.username}"
                                      a:placeholder="Username" />
-                        <h:inputSecret id="signin-password" class="input" value="#{loginManager.password}"
+                        <h:inputSecret id="signin-password" class="input-control" value="#{loginManager.password}"
                                        a:placeholder="Password" />
                         <!-- Error message -->
                         <h:outputLabel id="signin-error-message" class="error-message"
