--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -28,7 +28,7 @@
                     <div id="map-menu-title">Search and filters</div>
                     <img id="map-menu-close" src="resources/images/menu-hide.png" alt="Close Menu" />
                     <!-- Change location -->
-                    <input id="map-menu-change-loc" class="input" type="text" placeholder="Change your location"/>
+                    <input id="map-menu-change-loc" class="input-control" type="text" placeholder="Change your location"/>
                     <button id="map-menu-change-loc-btn">
                         <img src="resources/images/change-loc.png" />
                     </button>
@@ -36,11 +36,11 @@
                     <div style="clear: both"></div>
                     <hr class="map-menu-divider" />
                     <!-- Filter by keyword -->
-                    <input id="map-menu-filter-keyword" class="input" type="text" placeholder="Filter pins by keyword"/>
+                    <input id="map-menu-filter-keyword" class="input-control" type="text" placeholder="Filter pins by keyword"/>
                     <!-- Sort drop down -->
                     <div id="map-menu-sort-filter">
                         Sort pins by: 
-                        <select id="map-menu-sort-select" class="input">
+                        <select id="map-menu-sort-select" class="input-control">
                             <option value="distance">Distance</option>
                             <option value="newest">Newest</option>
                             <option value="popular">Popular</option>
@@ -50,7 +50,7 @@
                     <div id="map-menu-distance-filter">
                         <input id="map-menu-distance-checkbox" type="checkbox" />
                         Only show pins within 
-                        <input id="map-menu-distance-input" class="input" type="text" value="5" /> 
+                        <input id="map-menu-distance-input" class="input-control" type="text" value="5" /> 
                         miles
                     </div>
                     <!-- Listed pins -->
