--- a/web/EnterUsername.xhtml
+++ b/web/EnterUsername.xhtml
@@ -7,34 +7,38 @@ Copyright Â© 2016 Hung Vu. All rights reserved.
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
     <h:body>
         <ui:composition template="template/siteTemplate.xhtml">
             <!-- Page title -->
             <title><ui:define name="title">StreetSmart - Enter Username</ui:define></title>
             <!-- Additional CSS styles needed -->
             <ui:define name="css">
-                <link rel="stylesheet" type="text/css" href="resources/css/createAccount.css"/>
+                <link rel="stylesheet" type="text/css" href="resources/css/enterUsername.css"/>
             </ui:define>
             <!-- Additional JS files needed -->
             
             <!-- Page content -->
             <ui:define name="editableContent">
-                <div align="center" style="width:50%; margin:0 auto;">
-            <h:form class="form-signin">
-                <h2 class="form-signin-heading">Please Enter Your Username</h2>
-                <fieldset>
-                    <div class="form-group" style="margin-bottom: 5px">
-                        <h:inputText id="username" value="#{passwordResetManager.username}" required="true"/>
-                    </div>
-                    <br/>
-                    <h:commandButton id="submit" action="#{passwordResetManager.usernameSubmit()}" value="Submit" /> 
-                    <h:button class="btn btn-lg btn-danger" id="cancel" outcome="index" value="Cancel" />
-                </fieldset>  
-                <br/>
-                <h:outputLabel value ="#{passwordResetManager.message}" />                
-            </h:form>
-        </div>
+                <div id="enter-username-wrapper">
+                    <!-- Page title -->
+                    <div id="page-title">Forgot Password</div>
+                    <h:form id="form">
+                        <!-- Input fields -->
+                        <h:inputText id="username" class="input-control" value="#{passwordResetManager.username}"
+                                     a:placeholder="What's your username?" />
+                        <!-- Error message -->
+                        <h:outputLabel id="form-error-message" class="error-message" value="#{passwordResetManager.message}" />
+                        <!-- Submit / cancel buttons -->
+                        <h:commandButton id="submit-btn" class="btn" value="Submit"
+                                         action="#{passwordResetManager.usernameSubmit()}" />
+                        <h:button id="cancel-btn" class="btn" value="Cancel" outcome="index" />
+                        
+                        <!-- Page bottom fix -->
+                        <div id="page-bottom-padding">&nbsp;</div>
+                    </h:form>
+                </div>
             </ui:define>
         </ui:composition>
     </h:body>
