--- a/web/SecurityQuestion.xhtml
+++ b/web/SecurityQuestion.xhtml
@@ -7,37 +7,39 @@ Copyright Â© 2016 Hung Vu. All rights reserved.
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
     <h:body>
         <ui:composition template="template/siteTemplate.xhtml">
             <!-- Page title -->
             <title><ui:define name="title">StreetSmart - Security Question</ui:define></title>
             <!-- Additional CSS styles needed -->
             <ui:define name="css">
-                <link rel="stylesheet" type="text/css" href="resources/css/createAccount.css"/>
+                <link rel="stylesheet" type="text/css" href="resources/css/securityQuestion.css"/>
             </ui:define>
             <!-- Additional JS files needed -->
             
             <!-- Page content -->
             <ui:define name="editableContent">
-                 <div align="center" style="width:50%; margin:0 auto;">
-            <h:form class="form-signin">
-                <h2 class="form-signin-heading">Please Answer Your Security Question</h2>
-                <fieldset>
-                <div class="form-group" style="margin-bottom:20px">
-                    <h:outputLabel for="question" value="#{passwordResetManager.securityQuestion}" />
+                <div id="security-question-wrapper">
+                    <!-- Page title -->
+                    <div id="page-title">Forgot Password</div>
+                    <h:form id="form">
+                        <!-- Input fields -->
+                        <h:outputLabel id="security-question" value="#{passwordResetManager.securityQuestion}" />
+                        <h:inputText id="security-answer" class="input-control" value="#{passwordResetManager.answer}"
+                                     a:placeholder="Security Answer" />
+                        <!-- Error message -->
+                        <h:outputLabel id="form-error-message" class="error-message" value="#{passwordResetManager.message}" />
+                        <!-- Submit / cancel buttons -->
+                        <h:commandButton id="submit-btn" class="btn" value="Submit"
+                                         action="#{passwordResetManager.securityquestionSubmit()}" />
+                        <h:button id="cancel-btn" class="btn" value="Cancel" outcome="index" />
+                        
+                        <!-- Page bottom fix -->
+                        <div id="page-bottom-padding">&nbsp;</div>
+                    </h:form>
                 </div>
-                <div class="form-group" style="margin-bottom: 10px">
-                    <h:inputText id="answer" value="#{passwordResetManager.answer}"/>
-                </div>
-                <br/>
-                <h:commandButton id="submit" action="#{passwordResetManager.securityquestionSubmit()}" value="Submit" />
-                <h:button class="btn btn-lg btn-danger" id="cancel" outcome="index" value="Cancel" />
-                </fieldset>
-                <br/>
-                <h:outputLabel value ="#{passwordResetManager.message}" />                  
-            </h:form>
-        </div>
             </ui:define>
         </ui:composition>
     </h:body>
