SS-28 Reset password layout done

--- a/web/ResetPassword.xhtml
+++ b/web/ResetPassword.xhtml
@@ -9,47 +9,43 @@ Copyright Â© 2016 Hung Vu. All rights reserved.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
     <h:body>
         <ui:composition template="template/siteTemplate.xhtml">
             <!-- Page title -->
             <title><ui:define name="title">StreetSmart - Reset Password</ui:define></title>
             <!-- Additional CSS styles needed -->
             <ui:define name="css">
-                <link rel="stylesheet" type="text/css" href="resources/css/createAccount.css"/>
+                <link rel="stylesheet" type="text/css" href="resources/css/resetPassword.css"/>
             </ui:define>
             <!-- Additional JS files needed -->
             
             <!-- Page content -->
             <ui:define name="editableContent">
-                <div align="center" style="width:50%; margin:0 auto;">
-            <h:form class="form-signin">
-                <h2 class="form-signin-heading">Please Enter Your New Password</h2>
-                <f:event listener="#{passwordResetManager.validateInformation}" type="postValidate"/>
-                <p:messages id="msgs" />                
-                <h:panelGrid columns="3" cellpadding="5" columnClasses="rightAlign, rightAlign, leftAlign">
-                    <p:outputLabel for="password" value="Password:" />
-                    <h:inputSecret id="password" value="#{passwordResetManager.password}"
-                                required="true" label="Password">
-                        <f:validator validatorId="passwordValidator" />
-                    </h:inputSecret>
-                    <p:message for="password" display="icon" />
-
-                    <p:outputLabel for="confirmPassword" value="Confirm Password:" />
-                    <h:inputSecret id="confirmPassword"
-                                required="true" label="Confirm Password">
-                        <f:validateLength minimum="3" />
-                    </h:inputSecret>
-                    <p:message for="confirmPassword" display="icon"/>                    
-                </h:panelGrid> 
-                <br/>
-                <h:commandButton id="submit" action="#{passwordResetManager.resetPassword()}" value="Submit" /> 
-                <h:button class="btn btn-lg btn-danger" id="cancel" outcome="index" value="Cancel" />
-                <br/>
-                <br/>
-                <h:outputLabel value ="#{passwordResetManager.message}" style="margin-left:10px"/>                  
-            </h:form>
-        </div>
+                <div id="reset-password-wrapper">
+                    <!-- Page title -->
+                    <div id="page-title">Forgot Password</div>
+                    <h:form id="form">
+                        <!-- Validator -->
+                        <f:event listener="#{passwordResetManager.validateInformation}" type="postValidate" />
+                        <!-- Input fields -->
+                        <h:inputText id="password" class="input-control" value="#{passwordResetManager.password}"
+                                     a:placeholder="New Password">
+                            <f:validator validatorId="passwordValidator" />
+                        </h:inputText>
+                        <h:inputText id="confirm-password" class="input-control" a:placeholder="Confirm Password" />
+                        <!-- Error message -->
+                        <h:outputLabel id="form-error-message" class="error-message" value="#{passwordResetManager.message}" />
+                        <!-- Submit / cancel buttons -->
+                        <h:commandButton id="submit-btn" class="btn" value="Submit"
+                                         action="#{passwordResetManager.resetPassword()}" />
+                        <h:button id="cancel-btn" class="btn" value="Cancel" outcome="index" />
+                        
+                        <!-- Page bottom fix -->
+                        <div id="page-bottom-padding">&nbsp;</div>
+                    </h:form>
+                </div>
             </ui:define>
         </ui:composition>
     </h:body>
