--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -4,7 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:p="http://primefaces.org/ui">
     <h:body>
         <ui:composition template="template/siteTemplate.xhtml">
             <!-- Page title -->
@@ -12,12 +14,16 @@
             <h:outputStylesheet name="css/jsfcrud.css"/>
             <!-- Additional CSS styles needed -->
             <ui:define name="css">
-                <link rel="stylesheet" type="text/css" href="resources/css/index.css"/>
+                <link rel="stylesheet" type="text/css" href="resources/css/index.css" />
+                <link rel="stylesheet" type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/themes/ui-lightness/jquery-ui.min.css"/>
+                <link rel="stylesheet" type="text/css" href="resources/css/dialog.css" />
             </ui:define>
             <!-- Additional JS files needed -->
             <ui:define name="js">
                 <script type="text/javascript" src="resources/js/index.js"></script>
                 <script type="text/javascript" src="resources/js/pins.js"></script>
+                <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"/>
+                <script type="text/javascript" src="resources/js/dialog.js"></script>
             </ui:define>
 
             <!-- Page content -->
@@ -81,11 +87,39 @@
                 <!-- Map js -->
                 <script type="text/javascript" src="resources/js/map.js"></script>
                 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUFqUfsRLDfd4kVe4wYkACPu9Aswm0AT0&amp;callback=initialize" async="async" defer="defer"></script>
+            
+                <!-- Add pin dialog -->
+                <div id="create-pin-dialog" title="Create a Pin">
+                    <h:form id="create-pin-form" enctype="multipart/form-data">
+                        <!-- Create pin form -->
+                        <div id="create-pin-fields-wrapper">
+                            <!-- Validator -->
+                            <f:event listener="#{accountManager.validateInformation}" type="postValidate"/>
+                            <!-- Fields -->
+                            <h:inputText id="title" class="input-control #{component.valid?'':'validation-failed'}" 
+                                         value="#{accountManager.pinTitle}" a:placeholder="Pin Title*"
+                                         required="true" />
+                            <h:inputTextarea id="description" class="input-control #{component.valid?'':'validation-failed'}"
+                                             value="#{accountManager.pinDescription}" a:placeholder="Pin Description*"
+                                             required="true" />
+                            Upload a photo (optional):
+                            <p:fileUpload id="browse-btn" mode="simple" />
+                            <input id="anonymous" type="checkbox" /> Make anonymous
+                        </div>
+                        <!-- Divider -->
+                        <hr style="margin: 15px 0 15px 0" />
+                        <!-- Upload / close button -->
+                        <h:commandButton id="cancel-btn" class="btn" value="Cancel" 
+                                         onclick="closeDialog()">
+                            <f:ajax execute="@form" render="@form"/>
+                        </h:commandButton>
+                        <h:commandButton id="create-btn" class="btn" value="Create Pin" 
+                                         action="#{accountManager.createPin()}" onclick="closeDialog()">
+                            <f:ajax execute="@form" render="@form"/>
+                        </h:commandButton>
+                    </h:form>
+                </div>
             </ui:define>
         </ui:composition>
-        <br />
-        <h:link outcome="/pin/List" value="Show All Pin Items"/>
-        <br />
-        <h:link outcome="/user/List" value="Show All User Items"/>
     </h:body>
 </html>
