--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -97,14 +97,18 @@
                             <f:event listener="#{accountManager.validateInformation}" type="postValidate"/>
                             <!-- Fields -->
                             <h:inputText id="title" class="input-control #{component.valid?'':'validation-failed'}" 
-                                         value="#{accountManager.pinTitle}" a:placeholder="Pin Title*"
+                                         value="#{pinManager.pinTitle}" a:placeholder="Pin Title*"
                                          required="true" />
                             <h:inputTextarea id="description" class="input-control #{component.valid?'':'validation-failed'}"
-                                             value="#{accountManager.pinDescription}" a:placeholder="Pin Description*"
+                                             value="#{pinManager.pinDescription}" a:placeholder="Pin Description*"
                                              required="true" />
                             Upload a photo (optional):
                             <p:fileUpload id="browse-btn" mode="simple" />
-                            <input id="anonymous" type="checkbox" /> Make anonymous
+                            <p:selectBooleanCheckbox value="#{pinManager.pinAnonymous}"> Make anonymous
+                            </p:selectBooleanCheckbox>
+                            <!-- Contains the browser's current location as "[lat] [long]". 
+                            Populated on window load. See window.onload() in map.js.-->
+                            <h:inputHidden id="pinDataHiddenContainer" value="#{pinManager.locationData}" />
                         </div>
                         <!-- Divider -->
                         <hr style="margin: 15px 0 15px 0" />
@@ -114,7 +118,7 @@
                             <f:ajax execute="@form" render="@form"/>
                         </h:commandButton>
                         <h:commandButton id="create-btn" class="btn" value="Create Pin" 
-                                         action="#{accountManager.createPin()}" onclick="closeDialog()">
+                                         action="#{pinManager.createPin(accountManager.selected)}" onclick="closeDialog()">
                             <f:ajax execute="@form" render="@form"/>
                         </h:commandButton>
                     </h:form>
