--- a/web/MyAccount.xhtml
+++ b/web/MyAccount.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-       xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
         <ui:composition template="template/siteTemplate.xhtml">
             <!-- Page title -->
@@ -38,11 +39,17 @@
                     <h:outputText value="Email: " />
                     <h:outputText value="#{profileViewManager.loggedInUser.email}" />
                     
-                    <h:outputText value="Posted Pins: " />
-                    <h:outputText value="#{accountManager.getPostedPins()}" />
                 </h:panelGrid>
                 <br/>
+                Posted Pins:
                 <br/>
+                <!-- Output all posted pins for a user. -->
+                <h:dataTable value="#{accountManager.postedPins}" var="pin">
+                    <h:column>
+                        <h:link value="#{pin.title}" outcome="pin">
+                        </h:link>
+                    </h:column>
+                </h:dataTable>
             </h:form>
         </div>
             </ui:define>
