SS-37: Fixed date formatting and made pin information easier to view

--- a/web/MyAccount.xhtml
+++ b/web/MyAccount.xhtml
@@ -41,17 +41,34 @@
                     
                 </h:panelGrid>
                 <br/>
-                Posted Pins:
+                Posted Pins
                 <br/>
                 <!-- Output all posted pins for a user. -->
-                <h:dataTable value="#{accountManager.postedPins}" var="pin">
+                <h:dataTable value="#{accountManager.postedPins}" var="pin" cellpadding="10">
                     <h:column>
-                        <h:link value="#{pin.title}" outcome="pin">
-                        </h:link>
+                        <h:outputText value="Title: #{pin.title} " />                       
+                    </h:column>
+                    <h:column>
+                        <h:outputText value="Pin Type: #{pin.type}" />
+                    </h:column>
+                    <h:column>
+                        <h:outputText value="Description: #{pin.description}" />                                                                                          
+                    </h:column>                   
+                    <h:column>
+                        <h:outputText value="Upvotes: #{pin.upvotes}" />                 
+                    </h:column>
+                    <h:column>
+                        <h:outputText value="Downvotes: #{pin.downvotes}" />
+                    </h:column>
+                    <h:column>
+                        <h:outputText value="Time Posted: #{pinManager.getFormattedDate(pin)}" />
                     </h:column>
                 </h:dataTable>
             </h:form>
         </div>
+                
+                        <!-- Page bottom fix -->
+                        <div id="page-bottom-padding">&nbsp;</div>
             </ui:define>
         </ui:composition>
     </h:body>
