Remove jsfCrud files, changed placeholder for location dialog, changed pins to show title

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -106,7 +106,7 @@
                             </div>
                             <!-- Field -->
                             <h:inputText id="loc" class="input-control #{component.valid?'':'validation-failed'}" 
-                                         a:placeholder="Your Location*" required="true" />
+                                         a:placeholder="Ex: 1000 Main St, Blacksburg, VA" required="true" />
                         </div>
                         <!-- Divider -->
                         <hr style="margin: 15px 0 15px 0" />
