SS-58 Cleaned up some id and class names.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -122,10 +122,10 @@
                     </div>
 
                     <!-- Pin details goes over the other menu items when displayed -->
-                    <div id="map-menu-pin">
-                        <img id="map-menu-pin-close" src="resources/images/close.png" alt="Close Menu"/>
-                        <img id="map-menu-pin-pic" src="" alt="Pin Picture"/>
-                        <div id="map-menu-pin-message"></div>
+                    <div id="map-menu-full-pin">
+                        <img id="full-pin-close" src="resources/images/close.png" alt="Close Menu"/>
+                        <img id="full-pin-pic" src="" alt="Pin Picture"/>
+                        <div id="full-pin-message"></div>
                     </div>
                 </div>
 
