Fixed missing closing tag for hr

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -159,7 +159,7 @@
                                     <div id="full-pin-comment-date">3 hours ago</div>
                                 </div>
                                 
-                                <hr class="full-pin-comment-divider" 
+                                <hr class="full-pin-comment-divider" />
                                     
                                 <div id="full-pin-comment">
                                     <div id="full-pin-comment-user">Tim Street</div>
