SS-31 Delete account implemented

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -22,7 +22,7 @@
                 <script type="text/javascript" src="resources/js/jquery-dotdotdot.js"></script>
                 <script type="text/javascript" src="resources/js/index.js"></script>
                 <script type="text/javascript" src="resources/js/pins.js"></script>
-                <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"/>
+                <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
                 <script type="text/javascript" src="resources/js/dialog.js"></script>
             </ui:define>
 
