--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -141,16 +141,17 @@
                             <h:form id="comment">
                                 <h:inputTextarea id="full-pin-post-comment" 
                                                  class="input-control #{component.valid?'':'validation-failed'}"
-                                                 a:placeholder="Write your comment..." required="true" />
+                                                 a:placeholder="Write your comment..." required="true" 
+                                                 value="#{commentsManager.comment}"/>
                                 <h:commandButton id="full-pin-post-comment-btn" class="btn" value="Post Comment" />
                             </h:form>
       
                             <div id="full-pin-comments-list">
                                 <ui:repeat value="#{commentsManager.getCommentsList()}" var="comment">
                                 <div id="full-pin-comment">
-                                    <div id="full-pin-comment-user"><h:outputText value="#{comment.getUsername()}"/></div>
+                                    <div id="full-pin-comment-user"><h:outputText value="#{comment.getSelectedUser().getUsername()}"/></div>
                                     <div id="full-pin-comment-msg"><h:outputText value="#{comment.getComment()}"/></div>
-                                    <div id="full-pin-comment-date"><h:outputText value="#{commentManager.getFormattedDate(comment)}"/></div>
+                                    <div id="full-pin-comment-date"><h:outputText value="#{commentsManager.getFormattedDate(comment)}"/></div>
                                 </div>
                                 
                                 <hr class="full-pin-comment-divider" />
