Fixed some styles that were lost

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -91,7 +91,7 @@
                                     </div>   
                                 </div>
                                 
-                                <div class="pins-list-pin-divider"/>
+                                <hr class="pins-list-pin-divider"/>
                             </ui:repeat>
                             <h:commandButton id="filterPinsByDistance" style="display: none" action="#{pinManager.filterByDistance()}">
                                 <f:ajax execute="@form" render="@form"/>
